temp content in Intro, z-index bugfix

--- a/src/css/datawindow.css
+++ b/src/css/datawindow.css
@@ -59,5 +59,5 @@ dataWindow .fadeBG {
     background: linear-gradient(to right,
             var(--ui-data-window-bg-color-transparent) 0%,
             var(--ui-data-window-bg-color) 169%);
-    z-index: 0;
+    z-index: -1;
 }
